change getFirst() for get(0)